search icon safari fix

--- a/src/style.css
+++ b/src/style.css
@@ -48,11 +48,12 @@ body {
   content: " ";
   position: absolute;
   top: 11px;
-  left: 25px;
+  left: 24px;
   width: 16px;
   height: 16px;
   background: url(/assets/search_icons.png) no-repeat 8px;
   background-position: 0px 0px;
+  z-index: 10;
 }
 
 .search__input {
@@ -63,6 +64,7 @@ body {
   border: 0;
   border-radius: 8px;
   padding: 4px 8px 4px 30px;
+  margin: 0;
   font-size: 14px;
 }
 
